# shreamy

./: .cruft.json  .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  pyproject.toml  tox.ini
docs/: changelog.md  conf.py  contributing.md  index.md  index.rst
docs/_static/: custom.css
docs/api/: index.md
docs/examples/: basic_stream.md  galpy_integration.md  index.md  multi_component.md  shell_formation.md
docs/getting_started/: concepts.md  installation.md  quickstart.md
docs/philosophy/: index.md  performance.md  unit_conventions.md  why_shreamy.md
docs/user_guide/: gravity.md  index.md  integration.md  particles.md  potentials.md  satellites.md  units.md
licenses/: LICENSE.rst
notebooks/: demo_orbits.ipynb  performance_optimization.ipynb
shreamy/: __init__.py  analysis.py  io.py  particle.py  shream.py  units.py
shreamy/gravity/: __init__.py  base.py  direct.py  null.py  tree.py  utils.py
shreamy/integrators/: __init__.py  base.py  block_timesteps.py  hermite.py  leapfrog.py  runge_kutta.py  utils.py  yoshida.py
shreamy/potentials/: __init__.py  base.py  composite.py  galpy_wrapper.py  hernquist.py  nfw.py  plummer.py  time_dependent.py  utils.py
shreamy/satellite/: __init__.py  base.py  composite.py  custom.py  galpy_df.py  hernquist.py  king.py  nfw.py  plummer.py  utils.py
shreamy/tests/: __init__.py  test_gravity.py  test_gravity_integrators.py  test_integrators.py  test_particle.py  test_potentials.py  test_potentials_galpy.py  test_satellite.py  test_shream.py  test_units.py
